Bug 550980 nsMsgDBFolder.cpp:180: error: cannot convert ‘const char*’ to ‘nsStringBuffer*’ in initialization (port bug 534136). r/sr=bienvenu,a=bustage fix for checkin to CLOSED TREE